// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c7 {
  background: var(--color-button);
  border-radius: 4px;
  border: none;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c7:hover {
  opacity: 0.8;
}

.c7:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c3:hover {
  color: var(--color-tertiary);
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c11 {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  flex-shrink: 0;
}

.c12 {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 280px;
  background: var(--color-background);
  z-index: 300;
  display: flex;
  flex-direction: column;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -8px 0 32px rgba(0, 0, 0, 0.8);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 100;
  padding: 0.75rem 0;
  transition: background 0.3s ease,border-color 0.3s ease,box-shadow 0.3s ease;
  background: transparent;
  border-bottom: 1px solid transparent;
  box-shadow: none;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: var(--color-headline);
  cursor: pointer;
  text-decoration: none;
}

.c5 {
  display: none;
  gap: 2rem;
  align-items: center;
}

.c6 {
  position: relative;
  padding-bottom: 2px;
}

.c6::after {
  content: "";
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
  height: 2px;
  background: var(--color-highlight);
  transform: scaleX(1);
  transform-origin: left;
  transition: transform 0.2s ease;
}

.c6:hover::after {
  transform: scaleX(1);
}

.c9 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0.5rem;
  min-width: 44px;
  min-height: 44px;
  color: var(--color-headline);
  display: flex;
  align-items: center;
  justify-content: center;
}

.c8 {
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  cursor: pointer;
  padding: 0.25rem 0.625rem;
  min-width: 44px;
  min-height: 44px;
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: var(--color-headline);
  border-radius: 4px;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c8:hover {
  background: rgba(255, 255, 255, 0.05);
  border-color: rgba(255, 255, 255, 0.4);
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c14 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1.5rem;
  overflow-y: auto;
}

.c15 {
  margin-top: auto;
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  align-self: flex-start;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: flex;
  }
}

@media (min-width: 900px) {
  .c10 {
    display: none;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          Andrea Agostini
        </a>
        <nav
          aria-label="Main navigation"
          class="c5"
        >
          <a
            class="c3 c6"
            href="#projects"
          >
            Projects
          </a>
          <a
            class="c3 c6"
            href="#skills"
          >
            Skills
          </a>
          <a
            class="c3 c6"
            href="#experience"
          >
            Experience
          </a>
          <a
            class="c3 c6"
            href="#contact"
          >
            Contact
          </a>
          <button
            aria-disabled="false"
            aria-label="Switch to English"
            class="c7 c8"
            type="button"
          >
            EN
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-disabled="false"
          aria-expanded="false"
          aria-label="Open menu"
          class="c7 c9 c10"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c11"
  />
  <div
    aria-label="Navigation menu"
    aria-modal="true"
    class="c12"
    id="mobile-nav"
    role="dialog"
  >
    <div
      class="c13"
    >
      <button
        aria-disabled="false"
        aria-label="Close menu"
        class="c7 c9"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c14"
      >
        <a
          class="c3"
          href="#projects"
        >
          Projects
        </a>
        <a
          class="c3"
          href="#skills"
        >
          Skills
        </a>
        <a
          class="c3"
          href="#experience"
        >
          Experience
        </a>
        <a
          class="c3"
          href="#contact"
        >
          Contact
        </a>
      </div>
    </nav>
    <button
      aria-disabled="false"
      aria-label="Switch to English"
      class="c7 c8 c15"
      type="button"
    >
      EN
    </button>
  </div>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c6 {
  background: var(--color-button);
  border-radius: 4px;
  border: none;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c6:hover {
  opacity: 0.8;
}

.c6:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c3:hover {
  color: var(--color-tertiary);
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c10 {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  flex-shrink: 0;
}

.c11 {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 280px;
  background: var(--color-background);
  z-index: 300;
  display: flex;
  flex-direction: column;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -8px 0 32px rgba(0, 0, 0, 0.8);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 100;
  padding: 0.75rem 0;
  transition: background 0.3s ease,border-color 0.3s ease,box-shadow 0.3s ease;
  background: transparent;
  border-bottom: 1px solid transparent;
  box-shadow: none;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: var(--color-headline);
  cursor: pointer;
  text-decoration: none;
}

.c5 {
  display: none;
  gap: 2rem;
  align-items: center;
}

.c8 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0.5rem;
  min-width: 44px;
  min-height: 44px;
  color: var(--color-headline);
  display: flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  cursor: pointer;
  padding: 0.25rem 0.625rem;
  min-width: 44px;
  min-height: 44px;
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: var(--color-headline);
  border-radius: 4px;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c7:hover {
  background: rgba(255, 255, 255, 0.05);
  border-color: rgba(255, 255, 255, 0.4);
}

.c7:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c13 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1.5rem;
  overflow-y: auto;
}

.c14 {
  margin-top: auto;
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  align-self: flex-start;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: flex;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          AA
        </a>
        <nav
          aria-label="Main navigation"
          class="c5"
        >
          <button
            aria-disabled="false"
            aria-label="Switch to English"
            class="c6 c7"
            type="button"
          >
            EN
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-disabled="false"
          aria-expanded="false"
          aria-label="Open menu"
          class="c6 c8 c9"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c10"
  />
  <div
    aria-label="Navigation menu"
    aria-modal="true"
    class="c11"
    id="mobile-nav"
    role="dialog"
  >
    <div
      class="c12"
    >
      <button
        aria-disabled="false"
        aria-label="Close menu"
        class="c6 c8"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c13"
      />
    </nav>
    <button
      aria-disabled="false"
      aria-label="Switch to English"
      class="c6 c7 c14"
      type="button"
    >
      EN
    </button>
  </div>
</div>
`;
